# python-intern-test

./: .gitignore  Makefile  README.md  leaderboard.py  main.py  pyproject.toml  test_leaderboard.py  test_type_check.py  type_check.py
.github/workflows/: PyCI.yml  python-app.yml
get_statistic/: README.md  leaderboard.py  main.py  test_leaderboard.py  test_type_check.py  type_check.py
get_statistic/leaderboard/: leaderboard.py  test_leaderboard.py
get_statistic/scripts/: test_script.py
get_statistic/type_check/: test_type_check.py  type_check.py
