[tool.poetry]
name = "test-code"
version = "0.1.0"
description = ""
authors = ["Daria <kharitonovadari@gmail.com>"]
packages = [
    { include = "get_statistic" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

